--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
                 <div class="contact-item">
                     <h4>LinkedIn</h4>
                     <p>Professional Network</p>
-                    <a href="#" target="_blank">Connect on LinkedIn</a>
+                    <a href="#" target="_blank">www.linkedin.com/in/todkarmahesh</a>
                 </div>
                 <div class="contact-item">
                     <h4>GitHub</h4>
