--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
                 <div class="contact-item">
                     <h4>Mobile</h4>
                     <p>Phone Contact</p>
-                    <a href="tel:+1234567890">+1 (234) 567-890</a>
+                    <a href="tel:+1234567890">+91 9322256000</a>
                 </div>
             </div>
 
